[package]
name = "todo_list"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
tower-http = { version = "0.5.2", features = ["cors"] }

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
